--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:context=".MainActivity">
+                tools:context=".MainActivity"
+                android:background="@android:color/white">
 
     <ImageView
         android:layout_width="match_parent"
@@ -22,7 +23,9 @@
         android:id="@+id/startButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:background="@android:color/white"
+        android:textColor="#3a8aec"/>
 
     <EditText
         android:layout_width="match_parent"
